сверстал часть модалки

--- a/index.html
+++ b/index.html
@@ -82,7 +82,23 @@
 
                 <h1 class="hero-title"> эффективные решения для вашего бизнеса </h1>
 
-                <a href="" class="button"> Заказать услугу </a>
+                <a href="" class="button" data-modal-open > Заказать услугу </a>
+
+                    <div class="backdrop is-hidden">
+
+                        <div class="modal" data-modal>
+
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                             At voluptatem rem expedita unde, saepe temporibus?
+                              Sint libero itaque aliquam excepturi quibusdam, numquam, non voluptates 
+                              hic suscipit odit veniam fugit nesciunt.
+                            </p>
+
+                            <button data-modal-close> Закрыть </button>
+
+                        </div>
+
+                    </div>
 
             </div>
 
@@ -745,6 +761,8 @@
         </div>
 
     </footer>
+
+  <script src="./js/modal.js"></script>
 
 </body>
 
